(executable
  (name trace_test)
  (modules trace_test)
  (flags :standard -g)
  (ocamlopt_flags :standard -g -O3)
  (libraries lmdb unix)
  )

(executable
  (name trace_test_2)
  (modules trace_test_2)
  (flags :standard -g)
  (ocamlopt_flags :standard -g -O3)
  (libraries lmdb unix)
  )

(executable
  (name trace_test_wodan)
  (modules trace_test_wodan)
  (flags :standard -g)
  (ocamlopt_flags :standard -g -O3)
  (libraries io-page-unix lmdb unix mirage-block-unix checkseum.c wodan)
  (preprocess (pps lwt_ppx))
  )
